# Big-Pig-Compressor

./: CMakeLists.txt  LICENSE  README.md  config.json
docs/: README.ar.md  README.es.md  README.fr.md  README.zh.md
src/: compression.cpp  compression.h  decompression.cpp  decompression.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
